@@ -26,15 +26,15 @@ class UDPTestCase extends UDPTestTemplate {
         serverConfig.setNetworks(new Network[]{Network.TCP, Network.UDP});
         serverConfig.setProtocol(parameter.protocol());
         serverConfig.setCipher(parameter.cipher());
-        serverConfig.setPassword(parameter.password());
-        ExecutorService service = Executors.newFixedThreadPool(2);
+        serverConfig.setPassword(parameter.serverPassword());
+        ExecutorService service = Executors.newVirtualThreadPerTaskExecutor();
         DefaultEventLoop executor = new DefaultEventLoop();
         launchClient(service, executor, clientConfig);
         launchServer(service, executor, clientConfig.getServers());
         for (int dstPort : dstPorts()) {
             handshakeAndSendBytes(clientConfig, dstPort);
         }
-        service.shutdownNow();
+        service.shutdown();
         executor.shutdownGracefully();
     }
 }
